Fix jumping blue bar.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,10 +42,6 @@ $reveal-modal-bg: $light-blue;
 
 .blue-bar{
   background-color: $blue;
-  padding-top: .75em;
-  width: 75%;
-  position: fixed;
-  left: 0px;
 }
 
 .title-panel {
